[package]
name = "hpm-rt"
version = "0.1.0"
rust-version = "1.59"
repository = "https://github.com/tfx2001/hpm-rt"
authors = ["tfx2001 <tfx2001@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for HPMicro MCUs"
keywords = ["riscv", "runtime", "startup"]
license = "MIT"
edition = "2021"

[features]
default = []
flash-xip = []

[dependencies]
r0 = "1.0.0"
riscv = "0.10"
riscv-rt-macros = { path = "macros", version = "0.2.0" }

[dev-dependencies]
panic-halt = "0.2.0"

[build-dependencies]
riscv-target = "0.1.2"
